finished fixed nav, add jump to top

--- a/style.css
+++ b/style.css
@@ -56,6 +56,8 @@ body {
 #bg img {
 }
 .title {
+  position: relative;
+  z-index: 2;
   font-family: 'Cinzel', serif;
   text-align: center;
   font-weight: normal;
@@ -88,19 +90,26 @@ body {
 .title > .blank:last-of-type {
   height: 2vw;
 }
+#nav-fixed-bg {
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  height: 3em;
+  background: linear-gradient(#000f 50%, #0000 80%);
+  display: flex;
+  justify-content: flex-end;
+}
 #nav {
   position: sticky;
-  top: 1em;
-  z-index: 1;
-}
-#nav > .btn > .text > span {
-  display: none;
-}
-@media (min-width: 40em) {
-  #nav > .btn > .text > span {
-    display: inline;
-  }
-}
+  top: 0em;
+  z-index: 3;
+  display:flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  pointer-events: none;
+}/*
 #nav::before {
   content: '';
   position: absolute;
@@ -111,39 +120,38 @@ body {
   z-index: -1;
   opacity: 1;
   transition: opacity 0.5s;
+}*/
+#nav > .btn-group {
+  display: inline-flex;
 }
-#nav > .btn {
-  text-align: left;
+#nav .btn {
+  height: 2em;
+  position: relative;
+  pointer-events: auto;
+  /*text-align: left;
   display: inline-block;
   width: 19%;
-  height: 2em;
   max-width: 13em;
-  overflow: hidden;
+  overflow: hidden;*/
 }
-.btn-bg-dark {
-  position: absolute;
-  width: inherit;
-  height: inherit;
-  max-width: inherit;
-  z-index: -2;
-  background: radial-gradient(#000, #000d, #0000 60%);
-  opacity: 1;
+#nav .btn .text > span {
+  display: none;
 }
-.btn-bg-light {
-  position: absolute;
-  width: inherit;
-  height: inherit;
-  max-width: inherit;
-  z-index: -1;
-  background: radial-gradient(#bdff, #36ff, #36f0 60%);
-  opacity: 0;
+@media (min-width: 36.5em) {
+  #nav .btn .text > span {
+    display: inline;
+  }
 }
-.btn > .text {
-  position: absolute;
+nav a {
+  text-decoration: none;
+}
+.btn .text {
+  /*position: absolute;*/
   width: inherit;
   height: inherit;
   max-width: inherit;
   text-align: center;
+  margin: 0 1em 0 1em;
 
   padding: 0.4em 0 0 0;
   color: #6af;
@@ -151,9 +159,28 @@ body {
   font-weight: 400;
   transition: color 0.5s;
 }
-.btn > .text:hover {
-  color: #000;
+.btn .text:hover {
+  color: #fff;
   transition: color 0.5s;
+}
+.btn-bg-dark {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  max-width: inherit;
+  z-index: -2;
+  background: radial-gradient(#000, #0000 75%);
+  opacity: 1;
+}
+.btn-bg-light {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  max-width: inherit;
+  z-index: -1;
+  /*background: radial-gradient(#bdff, #36ff, #36f0 60%);*/
+  background: radial-gradient(#36ff, #36ff, #36f0 75%);
+  opacity: 0;
 }
 #vp > .blank {
   height: 5vw;
